fixed photo and text align

--- a/laptop.css
+++ b/laptop.css
@@ -1,5 +1,10 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
 #Navbar{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 150px;
 }
 ul{
@@ -60,10 +65,49 @@ ul li a{
 .Navbar.bottom{
     border: 1px solid rgb(185, 185, 185);
 }
-
-.first{
-    height: 500px;
-    width: 1000px;
-    background: url(img/background/carA.jpg) no-repeat no-repeat center;
+.first>h1::first-line{
+    color: darkgrey;
+}
+#btn1{
+    margin-left: 40px;
+    margin-bottom: 40px;
 }
 
+.first::before{
+    position: absolute;
+    content: "";
+    background: url(img/background/carA.jpg)no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: -1;
+    top: 0px;
+    left:0;
+    opacity: 0.9;
+
+}
+.first{
+    width: 564px;
+    height: 580px;
+    justify-content: ;
+    color: rgb(236, 225, 225);
+    font-size: 50px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    /* border: 2px solid green; */
+    text-align: left;
+    flex-flow: column;
+
+}
+/* .first img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+} */
+
+
+.top{
+    display: flex;
+    justify-content: center;
+}
